# xaiflow

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  build.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.js  setup.py  simple_test_report.html  test_importance.py  test_plugin.py  test_plugin_auto_mpg.py  test_report.html  test_simple.py
.github/workflows/: ci.yml  publish-prod.yml  publish-test.yml
dev/: README.md  bundle.js  bundle.js.map  dev-entry.js  dev-index.html  dev-server.js  package.json  rollup.config.dev.js  vite.config.js
examples/: test_report_data.json
examples/notebooks/: auto_mpg_example.ipynb  azure_ml_auto_mpg_example.ipynb
examples/scripts/: auto_mpg_example.py
src/ce_mlflow_extension/: __init__.py  mlflow_plugin.py  report_generator.py  shap_analyzer.py
src/ce_mlflow_extension/templates/: main.js  report.html
src/ce_mlflow_extension/templates/assets/: bundle.js  bundle.js.map  styles.css
src/ce_mlflow_extension/templates/components/: ChartManager.svelte  DeepDiveManager.svelte  ImportanceChart.svelte  ImportanceChart2.svelte  MetadataTable.svelte  ScatterShapValues.svelte  ShapChart.svelte  SimpleDisplay.svelte
src/xaiflow/: __init__.py  mlflow_plugin.py  report_generator.py
src/xaiflow/templates/: report.html
src/xaiflow/templates/assets/: app.js  bundle.js  bundle.js.map
src/xaiflow/templates/components/: ChartManager.svelte  DeepDiveChart.svelte  DeepDiveManager.svelte  ImportanceChart2.svelte  ScatterShapValues.svelte
src/xaiflow/templates/utils/: colormap.ts  utils.ts
src/xaiflow/types/: entities.ts
src/xflow/: __init__.py  mlflow_plugin.py
src/xflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xflow/templates/: main.js
src/xflow/templates/assets/: bundle.js.map
src/xflow/templates/components/: ChartManager.svelte  ScatterShapValues.svelte
src/xflow/templates/utils/: utils.ts
tests/: test_mlflow_plugin.py  test_report_generator.py  test_shap_analyzer.py
