[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xaiflow"
version = "0.1.0rc2"
description = "MLflow integration library for generating interactive HTML reports with SHAP analysis using Svelte and Chart.js"
authors = [
    {name = "CloudExplain Team", email = "tobias@cloudexplain.eu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["mlflow", "machine learning", "explainability", "shap", "visualization", "html", "reports"]
dependencies = [
    "mlflow",
    "numpy",
    "pandas",
    "scikit-learn",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
]

[project.urls]
Documentation = "https://github.com/cloudexplain/ce-mlflow-extension"
Source = "https://github.com/cloudexplain/ce-mlflow-extension"
Tracker = "https://github.com/cloudexplain/ce-mlflow-extension/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xaiflow = [
    "templates/*.html",
    "templates/assets/bundle.js",
    "templates/assets/bundle.js.map",
    "templates/assets/cloudexplain_no_bg-2.png",
    "templates/components/*.svelte",
    "templates/utils/*.ts",
]